tweaked a couple of details within my API functions

--- a/index.html
+++ b/index.html
@@ -4,9 +4,78 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/4868de9485.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./Assets/css/style.css">
+    <title>Restofinder</title>
 </head>
 <body>
-    Hello World
+
+  <section class="hero is-success is-halfheight" id="hero">
+    <div class="hero-body">
+      <div class="">
+        <p class="title">
+          RestoFinder
+        </p>
+        <p class="subtitle">
+          Feeling hungry?
+        </p>
+        <p>Search for the best rated Restaurants nearby</p>
+        <img class="logo" src="./Assets/images/icon.png" alt="logo"/>
+      </div>
+    </div>
+    </section>
+  </section>
+
+  <div class="container">
+  <div id="line">
+    <h2>Find a Restaurant near you</h2>
+  </div>
+  
+  <div class="control has-icons-left">
+  <div class="select">
+    <select>
+      <option>Select Your Location</option>
+        <option value="cityOption">Sydney</option>
+        <option value="cityOption">Melbourne</option>
+        <option value="cityOption">Adelaide</option>
+        <option value="cityOption">Perth</option>
+        <option value="cityOption">Brisbane</option>
+        <option value="cityOption">Gold Coast</option>
+        <option value="cityOption">Darwin</option>
+        </div>
+          </div>
+    </select>
+    <div class="control">
+      <button class="button is-primary" id="submitBtn">Submit</button>
+    </div>
+  </div>
+  </div>
+
+</div>
+
+  <!--div class=" cities ">
+    <div class="cities-title">CITIES IN AUSTRALIA</div>
+    <div class="cities-sub-title">
+      Sydney, Melbourne, Adelaide, Perth, Brisbane, Gold Coast & Darwin
+    </div>
+  </div>
+</div-->
+
+
+​
+<footer id="contact-us" class="contact-us">
+  <div class="footer">
+      <h2>Contact Us</h2>
+  <div class="social-media">
+    <i class="fa-brands fa-facebook"></i>
+    <i class="fa-brands fa-twitter"></i>
+    <i class="fa-brands fa-youtube"></i>
+    </div>    
+</footer>
+
+
+​
+    <script src="./Assets/js/script.js"></script>
 </body>
 </html>
