replaced selection field with search field and added more CSS styling to landing page

--- a/index.html
+++ b/index.html
@@ -32,21 +32,11 @@
     <h2>Find a Restaurant near you</h2>
   </div>
   
-  <div class="control has-icons-left">
-  <div class="select">
-    <select>
-      <option>Select Your Location</option>
-        <option value="cityOption">Sydney</option>
-        <option value="cityOption">Melbourne</option>
-        <option value="cityOption">Adelaide</option>
-        <option value="cityOption">Perth</option>
-        <option value="cityOption">Brisbane</option>
-        <option value="cityOption">Gold Coast</option>
-        <option value="cityOption">Darwin</option>
-        </div>
-          </div>
-    </select>
-    <div class="control">
+
+  <div class="control" id="searchInput">
+    <input class="input is-medium" type="text" placeholder="Search your location here">
+  </div>
+    <div class="control" id="submitBtn">
       <button class="button is-primary" id="submitBtn">Submit</button>
     </div>
   </div>
