corrected a couple of very small syntax in HTML and added a bit of code to js

--- a/index.html
+++ b/index.html
@@ -24,26 +24,21 @@
         <img class="logo" src="./Assets/images/icon.png" alt="logo"/>
       </div>
     </div>
-    </section>
   </section>
 
   <div class="container">
-  <div id="line">
-    <h2>Find a Restaurant near you</h2>
+  <div id="line"></div>
+    <h2> Find a Restaurant near you </h2>
   </div>
   
 
-  <div class="control" id="searchInput">
+  <div class="control" id="cityInput">
     <input class="input is-medium" type="text" placeholder="Search your location here">
   </div>
-    <div class="control" id="submitBtn">
+  <div class="control">
       <button class="button is-primary" id="submitBtn">Submit</button>
-    </div>
   </div>
-  </div>
-
-</div>
-
+ 
   <!--div class=" cities ">
     <div class="cities-title">CITIES IN AUSTRALIA</div>
     <div class="cities-sub-title">
