changes to HTML

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   
 
   <div class="control" id="searchInput">
-    <input class="input is-medium" type="text" placeholder="Search your location here">
+    <input class="input is-medium" id="city-name" type="text" placeholder="Search your location here">
   </div>
     <div class="control" id="submitBtn">
       <button class="button is-primary" id="submitBtn">Submit</button>
