made changes to resaurants.html file to reflect Bulma, added CSS styling

--- a/index.html
+++ b/index.html
@@ -27,18 +27,14 @@
   </section>
 
   <div class="container">
-  <div id="line"></div>
-    <h2> Find a Restaurant near you </h2>
+  <div>
+    <h2 id="line"> Find a Restaurant near you </h2>
   </div>
   
-
-<<<<<<< HEAD
   <div class="control" id="searchInput">
     <input class="input is-medium" id="city-name" type="text" placeholder="Search your location here">
-=======
-  <div class="control" id="cityInput">
-    <input class="input is-medium" type="text" placeholder="Search your location here">
->>>>>>> main
+
+
   </div>
   <div class="control">
       <button class="button is-primary" id="submitBtn">Submit</button>
