--- a/restaurant.html
+++ b/restaurant.html
@@ -4,62 +4,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/4868de9485.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./Assets/css/restaurant.css">
     <title>RestoFinder</title>
 </head>
 <body>
-    <div class="navbar">
-        <div class="branding">
-            <a href="index.html"><img class="logo" src="Assets/images/icon.png"></a>
-            <a href="index.html"> <div class="logo-title">RestoFinder</div></a>
-        </div>
+
+  <section class="hero is-small is-primary">
+    <div class="hero-body">
+      <a href="index.html"><img class="logo" src="Assets/images/icon.png"></a>
+      <a href="index.html"> <div class="logo-title">RestoFinder</div></a>
     </div>
+  </section>
+
     <!-- <div class="result-res-image" style="background-image: url()"></div> -->
-    <div id="mid-section">
-        <div class="result-heading">
-	        <span>Showing Restaurants in <b></b></span>   
-        </div>
-   </div>
+    
+    <section class="section">
+      <div class="container">
+        <h3 class="title has-text-left is-size-4">Showing Location Results</h3>
+        <div class="columns mt-5 is-8 is-variable">
+          <div class="column is-4-tablet is-3-desktop">
+            <div class="card">
+              <div class="card-image has-text-centered px-6">
+                <img class="restoImage">
+                </div>
 
-    <div class="name-and-share">
-        <div class="rest-info">
-          <p class="rest-name"> Restaurant Name </p>
-          <p class="ratings">
-              <span>&#9733;</span>
-              <span class="update">0</span>
-              <span>|</span>
-              <span class="update">(5)</span>
-          </p>
-        </div>
-    </div>
-    <div class="address">
-        <p>Address</p>
-        <p class="rest-address"></p>
-      </div>     
+                <div class="card content">
+                  <p class="title is-size-5 restoName"></p>
+                  <p class="restoRating"></p>
+                </div>
+                <footer class="card-footer">
+                  <p class="card-footer-item">
+                    <a href="" class="has-text-grey">View Restaurant</a>
+                  </p>
+                </footer>
 
-      <div class="photos">
-        <div class="photos-heading">
-          <p>Photos</p>
-        </div>
-        <span class="rest-photos-info"></span>
-      </div><br>
 
-      <div class="menu-bar">
-        <div class="menu-heading">
-          <p>Menu</p>
-        </div><br><br>
-
-        <span class="rest-reviews-info"></span>
-    </div>
-    <hr>
-    <div class="rating-bar">
-          <div class="rating-heading">
-            <p>Ratings</p>
+              </div>
+            </div>
           </div>
-          <div class='user-reviews-info'>
-          </div>
-       </div>
-    </div>
-
+        </div>
+      </div>
+    </section>
+            
 <!-- link to JS with the APIs here  -->
 </body>
 </html>
