--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </footer>
 
 
-​
+​<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="./Assets/js/script.js"></script>
 </body>
 </html>
