--- a/restaurant.html
+++ b/restaurant.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
     <script src="https://kit.fontawesome.com/4868de9485.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./Assets/css/restaurant.css">
-    <title>RestoFinder</title>
+    <title>RestoFinder Results</title>
 </head>
 <body>
 
@@ -40,12 +40,12 @@
                   </p>
                 </footer>
 
-
               </div>
             </div>
           </div>
         </div>
       </div>
+      
     </section>
             
 <!-- link to JS with the APIs here  -->
