--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
 
   <div class="control" id="cityInput">
-    <input class="input is-medium" type="text" placeholder="Search your location here">
+    <input class="input is-medium" id="city-name" type="text" placeholder="Search your location here">
   </div>
   <div class="control">
       <button class="button is-primary" id="submitBtn">Submit</button>
