--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
   <div class="control">
       <button class="button is-primary" id="submitBtn">Submit</button>
   </div>
- 
+  
+  <div id="resto-container"></div>
   <!--div class=" cities ">
     <div class="cities-title">CITIES IN AUSTRALIA</div>
     <div class="cities-sub-title">
