committing latest changes to index.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   
   <div class="control" id="searchInput">
     <input class="input is-medium" id="city-name" type="text" placeholder="Search your location here">
-
+<div class="result"></div>
 
   </div>
   <div class="control">
