--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
     <div class="select">
       <select>
         <option>Select Your Location</option>
-          <option value="cityOption">Sydney</option>
-          <option value="cityOption">Melbourne</option>
-          <option value="cityOption">Brisbane</option>
+          <option value="citySyd" id="selectionSydney">Sydney</option>
+          <option value="cityMelb" id="selectionMelbourne">Melbourne</option>
+          <option value="cityBrisy" id="selectionBrisbane">Brisbane</option>
           </div>
             </div>
       </select>
