Added comments to HTML, CSS, JS. Added Deployed site, github repo, and Mock up gif to README.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Restofinder</title>
 </head>
 <body>
-
+<!--Hero Section/Header which includes Restaurant name/icon and one-liner-->
   <section class="hero is-success is-halfheight" id="hero">
     <div class="hero-body">
       <div class="">
@@ -26,17 +26,12 @@
     </div>
   </section>
 
+  <!--Line underneath header-->
   <div class="container">
   <div>
     <h2 id="line"> Find a Restaurant near you </h2>
-      <!--div class="control" id="searchInput">
-    <input class="input is-medium" id="city-name" type="text" placeholder="Search your location here">
-<div class="result"></div-->
-
-  <!--div class="control" id="cityInput">
-    <input class="input is-medium" id="city-name" type="text" placeholder="Search your location here">
-  </div-->
     
+  <!--Dropdown section for cities-->
   <div class="control" id="selectCity">
     <div class="select">
       <select>
@@ -47,16 +42,17 @@
           </div>
             </div>
       </select>
-  
+  <!--Submit Button-->
   <div class="control">
       <button class="button is-primary" id="submitBtn">Submit</button>
   </div>
   
   </div>
   </div>
-
+<!--Container to hold all cards which will have Restaurant information-->
 <div id="resto-container"></div>
 
+<!--Footer which includes social media icons-->
 ​<div>
 <footer id="contact-us" class="contact-us">
   <div class="footer">
